[package]
name = "dackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros"] }
dirs = "4.0.0"
filenamify = "0.1.0"
chrono = "0.4.22"
serde = "1.0.145"
serde_json = "1.0.85"
serde_bytes = "0.11.7"
tokio-stream = "0.1.11"
async-stream = "0.3.3"
regex = "1.7.0"
reqwest = "0.11.13"
mime = "0.3.16"